styles.css
.layout {
  width: 100%;
  display: grid;
  grid:
    "Wood Food Ressource1 Log" 20%
    "Ore Ressource3 Ressource2 Info2" 20%
    "Info Info Blood Combat" 20%
    "Craft Craft Craft Combat" 40%
    / 20% 20% 10% 50%;
  gap: 5px;
}

.layout > div {
  border: 1px solid #000000;
  background-color: #aaa;
  border-radius: 4px;
  min-height: 100px;
  text-align: center;
  
}

.Wood { grid-area: Wood; }
.Food { grid-area: Food; }
.Ressource1 { grid-area: Ressource1; }
.Log { grid-area: Log; }
.Ore { grid-area: Ore; }
.Ressource3 { grid-area: Ressource3; }
.Ressource2 { grid-area: Ressource2; }
.Info2 { grid-area: Info2; }
.Info { grid-area: Info; }
.Blood { grid-area: Blood; }
.Combat { grid-area: Combat; }
.Craft { grid-area: Craft; }

.button-row {
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
  margin-top: 10px;
}

button {
  flex: 1;
  min-width: 80px;
  font-size: 16px;
  padding: 5px;
  cursor: pointer;
}

button:disabled {
  background-color: #ccc;
  color: #666;
  cursor: not-allowed;
}

.resource-bar {
  width: 80%;
  max-width: 100%;
  height: 18px;
  background-color: #ddd;
  border: 1px solid #999;
  border-radius: 4px;
  margin-top: 5px;
  box-sizing: border-box;
}

.bar-inner {
  height: 100%;
  background-color: green;
  width: 0%; /* sera mis à jour dynamiquement */
  border-radius: 4px;
}

